# Voxel-based-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Mist/: CMakeLists.txt
Mist/Engine/: Engine.cpp  Engine.hpp  Shader.cpp  Shader.hpp  VoxLoader.cpp
Mist/TextRenderer/: TextRenderer.cpp  TextRenderer.hpp
Mist/VoxelRenderer/: VoxelRenderer.cpp  VoxelRenderer.hpp
Mist/VoxelRenderer/Chunk/: Chunk.cpp  Chunk.hpp
Mist/assets/: Temple.vox
Mist/inc/: logger.hpp
Mist/shader/: fragmentShader.glsl  textVertexShader.glsl  vertexShader.glsl
assets/: city.vox  torus.vox  untitled.vox
inc/: colors.hpp  logger.hpp
shader/: averageShadows.glsl  computeShader.glsl  fragmentShader.glsl  textFragmentShader.glsl  vertexShader.glsl
src/: CMakeLists.txt  Chunk.cpp  Chunk.hpp  Frame.cpp  Frame.hpp  TextRenderer.cpp  TextRenderer.hpp  VoxLoader.hpp  VoxelRenderer.cpp  VoxelRenderer.hpp  load.cpp  main.cpp
src/Camera/: Camera.cpp  Camera.hpp
